--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-google": "^0.11.0",
     "eslint-watch": "^4.0.2",
     "file-loader": "^2.0.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.9.4",
