--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "webpack-dev-server": "^3.1.9"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-minify-webpack-plugin": "^0.3.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
